Fri Mar  2 18:45:48 HKT 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltconfig.h.in: added setting of TRIO_REPLACE_STDIO
	  when TRIO routines are required.
	* libxslt/namespaces.c, libxslt/xsltutils.c: enhanced handling
	  of stdio.h vs. trio.h when trio routines are required (now
	  use XSLT_NEED_TRIO) (bug #412787)

Sun Feb 18 09:00:08 PST 2007 William Brack <wbrack@mmm.com.hk>

	* python/libxsl.py: fixed tab/space inconsistency with patch
	  provided by Andreas Hanke (bug #409193)

Thu Feb 15 14:03:18 PST 2007 William Brack <wbrack@mmm.com.hk>

	* doc/xslt.html: Changed all
	  references to CVS to be SVN; changed corresponding links.
	* doc/*html: regenerated the documentation for above

Wed Feb 14 01:21:38 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: Fixed problem with namespace on compound
	  predicate (bug #407731)

Wed Jan 24 11:05:28 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: added check for memory allocation error
	  (bug #400242); fixed "type-punned pointer" warnings.
	* libxslt/xsltutils.c: added checks for memory allocation error
	  (bug #400242)
	* restored NEWS, doc/EXSLT/downloads.html which mysteriously
	  disappeared from svn
	
Wed Jan 17 14:20:18 CET 2007 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: preparing release of 1.1.20
	* libexslt/crypto.c: small patch for missing includes on some BSD,
	  fixes #397373
	* configure.in: replace == by = in test, raised by Roland Illig,
	  should fix #397371

Sun Jan 14 18:45:08 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/functions.c: fixed two problems related to checking
	  of fragments, related to python htmlCtxtReadFile problem
	  reported on mailing list by Nic Ferrier.

Fri Jan 12 23:24:08 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/extensions.c: reverted last change, fixed some
	  comments.  Note that in it's current state the 'plugin'
	  implementation will fail if called from a program
	  compiled as static!
